Update ceph.yaml to add dependencies and refactor build steps

--- a/ceph.yaml
+++ b/ceph.yaml
@@ -79,6 +79,8 @@ environment:
       - yaml-cpp-dev
       - zlib-dev
       - zstd-dev
+      - py3.11-prettytable
+      - libarrow
 
 pipeline:
   - uses: git-checkout
@@ -92,8 +94,10 @@ pipeline:
     with:
       patches: fix-submodule.patch
 
-  - runs: |
-      cmake -B build -G Ninja -Wno-dev \
+  - uses: cmake/configure
+    with:
+      opts: |
+        -Wno-dev \
         -DCMAKE_BUILD_TYPE=Release \
         -DCMAKE_INSTALL_PREFIX=/usr \
         -DCMAKE_CXX_STANDARD=17 \
@@ -105,7 +109,7 @@ pipeline:
         -DWITH_GTEST_PARALLEL=ON \
         -DWITH_PYTHON3=3.11 \
         -DENABLE_GIT_VERSION=OFF \
-        -DLUA_LIBRARIES=/usr/lib/lua5.4/liblua.a \
+        -DLUA_LIBRARIES=/usr/lib/lua5.4/liblua.so \
         -DWITH_BABELTRACE=OFF \
         -DWITH_JAEGER=OFF \
         -DWITH_LTTNG=OFF \
@@ -133,11 +137,26 @@ pipeline:
 
   - runs: cmake --build build --target common-options-objs
 
-  - runs: cmake --build build
+  - uses: cmake/build
 
-  - runs: cmake --install build
+  - uses: cmake/install
 
   - uses: strip
+
+test:
+  pipeline:
+    - runs: ceph --version
+        - cephadm --version
+        - ceph-volume --version
+        - ceph-fuse --version
+        - ceph-mds --version
+        - ceph-mgr --version
+        - ceph-mon --version
+        - ceph-osd --version
+        - ceph-objectstore-tool --version
+        - radosgw-admin --version
+        - rbd --version
+
 
 update:
   enabled: true
