--- a/pgaudit-17.yaml
+++ b/pgaudit-17.yaml
@@ -3,7 +3,7 @@
 package:
   name: pgaudit-17
   version: "17.1"
-  epoch: 0
+  epoch: 1
   description: PostgreSQL Audit Extension
   copyright:
     - license: BSD-3-Clause
@@ -34,10 +34,44 @@ pipeline:
       make USE_PGXS=1 DESTDIR=${{targets.destdir}} PG_CONFIG=/usr/bin/pg_config install
 
 test:
+  environment:
+    contents:
+      packages:
+        - glibc-locales
+        - make
+        - postgresql-17
+        - postgresql-17-client
+        - postgresql-17-contrib
+        - shadow
+        - sudo-rs
+    environment:
+      PGDATA: /tmp/test_db
+      PGUSER: wolfi
   pipeline:
     - uses: test/ldd-check
       with:
         packages: ${{package.name}}
+    - uses: git-checkout
+      with:
+        repository: https://github.com/pgaudit/pgaudit.git
+        tag: ${{package.version}}
+        expected-commit: 538f89a93d8fd0d8913f3d740cacaea7b7eb66d9
+    - runs: |
+        # Based on upstream tests in https://github.com/pgaudit/pgaudit/tree/main/test
+        useradd $PGUSER
+        sudo -u $PGUSER initdb -D $PGDATA
+        echo "shared_preload_libraries = 'pgaudit'" >> ${PGDATA}/postgresql.conf
+        if ! sudo -u $PGUSER pg_ctl -D $PGDATA -l /tmp/logfile start; then
+          echo "!!! SERVER STARTUP FAILED"
+          cat /tmp/logfile
+          exit 1
+        fi
+
+        if ! make installcheck USE_PGXS=1; then
+          echo "!!! INSTALLCHECK FAILED"
+          cat regression.diffs
+          exit 1
+        fi
 
 update:
   enabled: true
