pulumi: add coreutils to build dependencies
Required for `sort --key` in `make install`.

--- a/pulumi.yaml
+++ b/pulumi.yaml
@@ -12,6 +12,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - coreutils
       - go
       - nodejs
       - patch
