--- a/enchant2.yaml
+++ b/enchant2.yaml
@@ -1,7 +1,7 @@
 package:
   name: enchant2
   version: 2.8.2
-  epoch: 2
+  epoch: 3
   description: enchant spellchecking library
   copyright:
     - license: LGPL-2.1-only
@@ -51,6 +51,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: enchant2-dev
 
   - name: enchant2-doc
     description: enchant2 docs
