--- a/expat.yaml
+++ b/expat.yaml
@@ -1,7 +1,7 @@
 package:
   name: expat
   version: 2.6.4
-  epoch: 1
+  epoch: 2
   description: "XML SAX Parser library written in C"
   copyright:
     - license: MIT
@@ -41,6 +41,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: expat-dev
 
   - name: "libexpat1"
     description: "libexpat shared library"
