Update ceph.yaml to add libarrow and py3.11-prettytable dependencies, and adjust build target

--- a/ceph.yaml
+++ b/ceph.yaml
@@ -39,6 +39,7 @@ environment:
       - jq
       - keyutils-dev
       - libaio-dev
+      - libarrow
       - libcap-dev
       - libcap-ng-dev
       - libedit-dev
@@ -63,6 +64,7 @@ environment:
       - pkgconf
       - posix-libc-utils
       - py3.11-cython
+      - py3.11-prettytable
       - py3.11-pyyaml
       - py3.11-setuptools
       - py3.11-sphinx-bin
@@ -79,8 +81,6 @@ environment:
       - yaml-cpp-dev
       - zlib-dev
       - zstd-dev
-      - py3.11-prettytable
-      - libarrow
 
 pipeline:
   - uses: git-checkout
@@ -135,7 +135,7 @@ pipeline:
         -DWITH_TESTS="$(want_check && echo ON || echo OFF)" \
         -DWITH_THREAD_SAFE_RES_QUERY=ON
 
-  - runs: cmake --build build --target common-options-objs
+  - runs: cmake --build output --target common-options-objs
 
   - uses: cmake/build
 
@@ -145,18 +145,7 @@ pipeline:
 
 test:
   pipeline:
-    - runs: ceph --version
-        - cephadm --version
-        - ceph-volume --version
-        - ceph-fuse --version
-        - ceph-mds --version
-        - ceph-mgr --version
-        - ceph-mon --version
-        - ceph-osd --version
-        - ceph-objectstore-tool --version
-        - radosgw-admin --version
-        - rbd --version
-
+    - runs: ceph --version - cephadm --version - ceph-volume --version - ceph-fuse --version - ceph-mds --version - ceph-mgr --version - ceph-mon --version - ceph-osd --version - ceph-objectstore-tool --version - radosgw-admin --version - rbd --version
 
 update:
   enabled: true
