--- a/ffmpeg.yaml
+++ b/ffmpeg.yaml
@@ -2,7 +2,7 @@
 package:
   name: ffmpeg
   version: 7.1
-  epoch: 6
+  epoch: 7
   description: ffmpeg multimedia library
   copyright:
     - license: GPL-3.0-or-later AND LGPL-3.0-or-later
@@ -146,6 +146,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ffmpeg-dev
 
   - name: ffmpeg-doc
     pipeline:
