--- a/py3-prettytable.yaml
+++ b/py3-prettytable.yaml
@@ -49,6 +49,10 @@ subpackages:
           prevent-inclusion: melange-out
       - uses: strip
     test:
+      environment:
+        contents:
+          packages:
+            - python-3.11
       pipeline:
         - name: Check if the package is installed
           runs: |
