Add the ldd-check test to flex

--- a/flex.yaml
+++ b/flex.yaml
@@ -1,7 +1,7 @@
 package:
   name: flex
   version: 2.6.4
-  epoch: 7
+  epoch: 8
   description: "tool for generating text-scanning programs"
   copyright:
     - license: BSD-2-Clause AND LGPL-2.0-or-later
@@ -54,6 +54,11 @@ subpackages:
     dependencies:
       runtime:
         - flex
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: flex-dev
 
   - name: "libfl2"
     description: "flex scanner library"
