--- a/fmt.yaml
+++ b/fmt.yaml
@@ -1,7 +1,7 @@
 package:
   name: fmt
   version: "11.1.4"
-  epoch: 0
+  epoch: 1
   description: Modern formatting library
   copyright:
     - license: MIT
@@ -41,6 +41,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: fmt-dev
 
 update:
   enabled: true
