--- a/fontconfig.yaml
+++ b/fontconfig.yaml
@@ -1,7 +1,7 @@
 package:
   name: fontconfig
   version: "2.16.0"
-  epoch: 0
+  epoch: 1
   description: Library for configuring and customizing font access
   copyright:
     - license: MIT
@@ -97,6 +97,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: fontconfig-dev
 
 update:
   enabled: true
