--- a/frr-10.2.yaml
+++ b/frr-10.2.yaml
@@ -1,7 +1,7 @@
 package:
   name: frr-10.2
   version: 10.2.1
-  epoch: 0
+  epoch: 1
   description: The FRRouting Protocol Suite
   copyright:
     - license: GPL-2.0-only
@@ -90,6 +90,11 @@ subpackages:
         - frr=${{package.full-version}}
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: frr-10.2-dev
 
   - name: ${{package.name}}-debug
     dependencies:
