--- a/gdbm.yaml
+++ b/gdbm.yaml
@@ -1,7 +1,7 @@
 package:
   name: gdbm
   version: "1.24"
-  epoch: 2
+  epoch: 3
   description: "GNU dbm is a set of database routines which use extensible hashing"
   copyright:
     - license: GPL-3.0-or-later
@@ -41,6 +41,11 @@ subpackages:
     dependencies:
       runtime:
         - gdbm
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: gdbm-dev
 
   - name: gdbm-doc
     description: gdbm docs
