copy contents instead of symlink for /logs
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/nginx-mainline.yaml
+++ b/nginx-mainline.yaml
@@ -268,7 +268,7 @@ subpackages:
         - grep
         - openssl
         - glibc-locales
-        - nginx-mainline-package-config
+        - nginx-package-config
         - nginx-mod-http_geoip
         - nginx-mod-stream_geoip
     pipeline:
@@ -283,6 +283,7 @@ subpackages:
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf/conf.d
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf.default
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/conf.d
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/logs
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/tmp
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/tmp
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf/bitnami/certs
@@ -297,7 +298,8 @@ subpackages:
           ln -sf /usr/lib/nginx/modules ${{targets.contextdir}}/opt/bitnami/nginx/modules
           ln -sf /var/lib/nginx/html ${{targets.contextdir}}/opt/bitnami/nginx/html
           ln -sf /opt/bitnami/nginx/html ${{targets.contextdir}}/app
-          ln -sf /var/log/nginx ${{targets.contextdir}}/opt/bitnami/nginx/logs
+          ln -sf /dev/stdout ${{targets.contextdir}}/opt/bitnami/nginx/logs/access.log
+          ln -sf /dev/stderr ${{targets.contextdir}}/opt/bitnami/nginx/logs/error.log
           ln -sf /opt/bitnami/nginx/conf/bitnami/certs ${{targets.contextdir}}/certs
       - name: Set symlinks (configs)
         runs: |
