--- a/gnutls.yaml
+++ b/gnutls.yaml
@@ -1,7 +1,7 @@
 package:
   name: gnutls
   version: "3.8.9"
-  epoch: 0
+  epoch: 1
   description: TLS protocol implementation
   copyright:
     - license: LGPL-2.1-or-later
@@ -91,6 +91,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: gnutls-dev
 
   - name: gnutls-utils
     pipeline:
