--- a/graphene.yaml
+++ b/graphene.yaml
@@ -2,7 +2,7 @@
 package:
   name: graphene
   version: 1.10.8
-  epoch: 4
+  epoch: 5
   description: A thin layer of graphic data types
   copyright:
     - license: MIT
@@ -48,6 +48,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: graphene-dev
 
 update:
   enabled: true
