--- a/graphicsmagick.yaml
+++ b/graphicsmagick.yaml
@@ -1,7 +1,7 @@
 package:
   name: graphicsmagick
   version: "1.3.45"
-  epoch: 0
+  epoch: 1
   description: GraphicsMagick provides a set of commandline tools and programming APIs for manipulating, editing, and converting raster and vector images.
   copyright:
     - license: MIT
@@ -83,6 +83,9 @@ subpackages:
             GraphicsMagick-config --version
             GraphicsMagickWand-config --version
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: graphicsmagick-dev
 
   - name: ${{package.name}}-compat
     description: "Compatibility package to improve replacing of other container images"
