--- a/icu.yaml
+++ b/icu.yaml
@@ -1,7 +1,7 @@
 package:
   name: icu
   version: "75.1"
-  epoch: 6
+  epoch: 7
   description: "International Components for Unicode library"
   copyright:
     - license: MIT
@@ -77,6 +77,9 @@ subpackages:
             icu-config --version
             icu-config --help
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: icu-dev
 
   - name: icu-libs
     description: International Components for Unicode library (libs)
