--- a/glibc.yaml
+++ b/glibc.yaml
@@ -1,7 +1,7 @@
 package:
   name: glibc
   version: 2.40
-  epoch: 20
+  epoch: 21
   description: "the GNU C library"
   copyright:
     - license: LGPL-2.1-or-later
@@ -30,7 +30,7 @@ package:
         - /usr/lib64
       script: |
         #!/bin/busybox sh
-        /sbin/ldconfig
+        /usr/bin/ldconfig
 
 environment:
   contents:
