--- a/chromium.yaml
+++ b/chromium.yaml
@@ -8,7 +8,7 @@ package:
   name: chromium
   version: "133.0.6943.141"
   epoch: 0
-  description: "Open souce version of Google's chrome web browser"
+  description: "Open source version of Google's chrome web browser"
   copyright:
     - license: BSD-3-Clause
   resources:
