use go/build pipeline
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/kubeflow-pipelines.yaml
+++ b/kubeflow-pipelines.yaml
@@ -34,11 +34,13 @@ environment:
 data:
   - name: backends-go-builds
     items:
-      apiserver: apiserver;apiserver
-      persistence_agent: persistence_agent;agent/persistence
-      cache_server: cache_server;cache
-      scheduledworkflow: swf;crd/controller/scheduledworkflow
-      viewer-crd-controller: viewer;crd/controller/viewer
+      apiserver: apiserver
+      persistence_agent: agent/persistence
+      cache_server: cache
+      swf: crd/controller/scheduledworkflow
+      viewer: crd/controller/viewer
+      driver: v2/cmd/driver
+      launcher: v2/cmd/launcher-v2
 
 pipeline:
   - uses: git-checkout
@@ -81,43 +83,40 @@ subpackages:
     name: "kubeflow-pipelines-${{range.key}}"
     description: "Kubeflow Pipelines ${{range.key}}"
     pipeline:
-      - runs: |
-          cd backend
+      - uses: go/build
+        with:
+          modroot: .
+          packages: github.com/kubeflow/pipelines/backend/src/${{range.value}}
+          output: ${{range.key}}
+      - assertions:
+          required-steps: 1
+        pipeline:
+          - if: "'${{range.key}}' == 'swf'"
+            runs: |
+              ln -sf /usr/bin/swf ${{targets.subpkgdir}}/usr/bin/scheduledworkflow
+          - if: "'${{range.key}}' == 'viewer'"
+            runs: |
+              ln -sf /usr/bin/viewer ${{targets.subpkgdir}}/usr/bin/viewer-crd-controller
+          - if: "'${{range.key}}' == 'apiserver'"
+            runs: |
+              mkdir -p ${{targets.subpkgdir}}/samples
+              # Patch GHSA-248v-346w-9cwc
+              sed -i 's|certifi==2023.7.22|certifi==2024.07.04|g' backend/requirements.txt
 
-          mkdir -p ${{targets.subpkgdir}}/usr/bin
-          mkdir -p ${{targets.subpkgdir}}/third_party
+              # Patch GHSA-jfmj-5v4g-7637
+              sed -i 's|zipp==3.15.0|zipp==3.19.1|g' backend/requirements.txt
 
-          name=$(echo "${{range.value}}" | cut -d ';' -f 1)
-          path=$(echo "${{range.value}}" | cut -d ';' -f 2-)
+              # GHSA-79v4-65xg-pq4g
+              echo "cryptography==44.0.1" >> backend/requirements.txt
 
-          make build/$name
-          install -Dm755 ./build/$name ${{targets.subpkgdir}}/usr/bin/${{range.key}}
-
-          go-licenses check ./src/$path
-          go-licenses csv ./src/$path > ${{targets.subpkgdir}}/third_party/$name.csv
-          go-licenses save ./src/$path --save_path ${{targets.subpkgdir}}/third_party/NOTICES
-
-          if [ "${name}" == "apiserver" ]; then
-            mkdir -p ${{targets.subpkgdir}}/samples
-            # Patch GHSA-248v-346w-9cwc
-            sed -i 's|certifi==2023.7.22|certifi==2024.07.04|g' requirements.txt
-
-            # Patch GHSA-jfmj-5v4g-7637
-            sed -i 's|zipp==3.15.0|zipp==3.19.1|g' requirements.txt
-
-            # GHSA-79v4-65xg-pq4g
-            echo "cryptography==44.0.1" >> requirements.txt
-
-            pip3 install --prefer-binary -r requirements.txt --prefix=/usr --root=${{targets.subpkgdir}}
-            cp -r ../samples/* ${{targets.subpkgdir}}/samples
-            cp ./src/$path/config/sample_config.json ${{targets.subpkgdir}}/samples/sample_config.json
-            mkdir -p ${{targets.subpkgdir}}/config
-            cp -r ./src/$path/config/* ${{targets.subpkgdir}}/config/
-            export COMMIT_SHA=$(git rev-parse --short HEAD)
-            sed -E "s#/(blob|tree)/master/#/\1/${COMMIT_SHA}/#g" -i ${{targets.subpkgdir}}/config/sample_config.json
-            sed -E "s/%252Fmaster/%252F${COMMIT_SHA}/#g" -i ${{targets.subpkgdir}}/config/sample_config.json
-          fi
-      - uses: strip
+              pip3 install --prefer-binary -r backend/requirements.txt --prefix=/usr --root=${{targets.subpkgdir}}
+              cp -r samples/* ${{targets.subpkgdir}}/samples
+              cp backend/src/apiserver/config/sample_config.json ${{targets.subpkgdir}}/samples/sample_config.json
+              mkdir -p ${{targets.subpkgdir}}/config
+              cp -r backend/src/apiserver/config/* ${{targets.subpkgdir}}/config/
+              export COMMIT_SHA=$(git rev-parse --short HEAD)
+              sed -E "s#/(blob|tree)/master/#/\1/${COMMIT_SHA}/#g" -i ${{targets.subpkgdir}}/config/sample_config.json
+              sed -E "s/%252Fmaster/%252F${COMMIT_SHA}/#g" -i ${{targets.subpkgdir}}/config/sample_config.json
     test:
       environment:
         contents:
@@ -271,6 +270,6 @@ subpackages:
 update:
   enabled: true
   ignore-regex-patterns:
-    - 'sdk-'
+    - "sdk-"
   github:
     identifier: kubeflow/pipelines
