update py3-prettytable.yaml to use dynamic python version in test environment

--- a/py3-prettytable.yaml
+++ b/py3-prettytable.yaml
@@ -47,12 +47,11 @@ subpackages:
         with:
           python: python${{range.key}}
           prevent-inclusion: melange-out
-      - uses: strip
     test:
       environment:
         contents:
           packages:
-            - python-3.11
+            - python-${{range.key}}
       pipeline:
         - name: Check if the package is installed
           runs: |
