add missing py3-cryptography for dask-gateway-server
Signed-off-by: Batuhan Apaydin <batuhan.apaydin@chainguard.dev>

--- a/dask-gateway.yaml
+++ b/dask-gateway.yaml
@@ -1,7 +1,7 @@
 package:
   name: dask-gateway
   version: 2024.1.0
-  epoch: 15
+  epoch: 16
   description: "A multi-tenant server for securely deploying and managing Dask clusters."
   copyright:
     - license: BSD-3-Clause
@@ -79,6 +79,7 @@ subpackages:
         - py${{vars.py-version}}-colorlog
         - py${{vars.py-version}}-sqlalchemy
         - py${{vars.py-version}}-traitlets
+        - py${{vars.py-version}}-cryptography
     pipeline:
       - name: Python Build
         runs: |
