Remove bson-codec as it should already moved by bson wildcard
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/flyway.yaml
+++ b/flyway.yaml
@@ -30,7 +30,7 @@ vars:
   drivers-core: "aws-secretsmanager-jdbc databricks-jdbc google-cloud-storage h2 hsqldb jaybird jffi jtds mariadb-java-client mssql-jdbc ojdbc11 postgresql singlestore-jdbc-client snowflake-jdbc sqlite-jdbc"
   drivers-cassandra: "asm caffeine cassandra-driver-kerberos cassandra-jdbc-wrapper commons-collections4 commons-io commons-lang3 config HdrHistogram java-driver-core java-driver-shaded jnr jsr305 metrics-core native-protocol semver4j"
   drivers-gcp: "animal-sniffer-annotations annotations api-common auto-value-annotations checker-qual commons-codec conscrypt-openjdk-uber detector-resources-support error_prone_annotations failureaccess gax google-auth-library google-cloud-core google-cloud-monitoring google-cloud-spanner google-http-client grpc guava httpclient httpcore j2objc-annotations javax.annotation-api listenablefuture opencensus perfmark-api proto protobuf-java re2j threetenbp"
-  drivers-mongo: "bson bson-record-codec flyway-database-nc-mongodb mongodb-driver-core mongodb-driver-sync"
+  drivers-mongo: "bson flyway-database-nc-mongodb mongodb-driver-core mongodb-driver-sync"
 
 pipeline:
   - uses: git-checkout
