refactor test script in py3-prettytable.yaml to improve output validation and structure

--- a/py3-prettytable.yaml
+++ b/py3-prettytable.yaml
@@ -58,10 +58,10 @@ subpackages:
             python3 -c "import prettytable; print(prettytable.__version__)" | grep -q "${{package.version}}"
         - name: Test adding and retrieving table data
           runs: |
-            python3 -c "
+            cat <<"EOF" >test.py
+            #!/usr/bin/env python
             from prettytable import PrettyTable
 
-            # Expected structured data
             expected_data = [
                 {'Name': 'Alice', 'Age': 30, 'City': 'New York'},
                 {'Name': 'Bob', 'Age': 25, 'City': 'Los Angeles'},
@@ -75,21 +75,26 @@ subpackages:
             for row in expected_data:
                 table.add_row([row['Name'], row['Age'], row['City']])
 
-            # Retrieve data from table
-            actual_data = [
-                {'Name': row[0], 'Age': int(row[1]), 'City': row[2]}
-                for row in table._rows  # Access raw data stored in the table
-            ]
+            print(table)
+            EOF
+            got="$(python test.py)"
+            if [ -z "${got}" ]; then
+              echo "PrettyTable output is empty"
+              exit 1
+            fi
 
-            # Compare retrieved data with expected values
-            if actual_data != expected_data:
-                print('Mismatch in table data!')
-                print('Expected:', expected_data)
-                print('Actual:', actual_data)
-                exit(1)
-
-            print('Table data retrieval matches expected values.')
-            "
+              # Compare retrieved data with expected values
+            expected="+---------+-----+-------------+
+            |   Name  | Age |     City    |
+            +---------+-----+-------------+
+            |  Alice  |  30 |   New York  |
+            |   Bob   |  25 | Los Angeles |
+            | Charlie |  35 |   Chicago   |
+            +---------+-----+-------------+"
+            if [[ "${got}" != "${expected}" ]]; then
+              echo "PrettyTable output is not as expected"
+              exit 1
+            fi
 
   - name: py3-supported-${{vars.pypi-package}}
     description: meta package providing ${{vars.pypi-package}} for supported python versions.
