Added package.json copy over to prism

--- a/prism.yaml
+++ b/prism.yaml
@@ -39,7 +39,9 @@ pipeline:
       do
         mkdir -p ${{targets.destdir}}/usr/src/prism/packages/$pkg
         cp -r packages/$pkg/dist/ ${{targets.destdir}}/usr/src/prism/packages/$pkg/
+        cp packages/$pkg/package.json ${{targets.destdir}}/usr/src/prism/packages/$pkg/
         cp -r packages/$pkg/node_modules ${{targets.destdir}}/usr/src/prism/packages/$pkg/
+      
       done
 
       # Make cli binary executable
