Fix typo: typo flyway need to be netty
Signed-off-by: debasishbsws <debasishbsws.dev@gmail.com>

--- a/flyway.yaml
+++ b/flyway.yaml
@@ -128,9 +128,9 @@ pipeline:
   - name: Move flyway lib/netty jars
     runs: |
       # Install netty related jars to `flyway/lib/netty`
-      mv flyway-commandline/target/dependency/netty-*.jar ${{targets.contextdir}}/${{vars.flyway-base}}/lib/flyway
+      mv flyway-commandline/target/dependency/netty-*.jar ${{targets.contextdir}}/${{vars.flyway-base}}/lib/netty
       # The above wildcard also matches netty-nio-client-*.jar, which is not needed
-      rm ${{targets.contextdir}}/${{vars.flyway-base}}/lib/flyway/netty-nio-client-*.jar
+      rm ${{targets.contextdir}}/${{vars.flyway-base}}/lib/netty/netty-nio-client-*.jar
 
       echo "=== List of copied netty jars in flyway/lib/netty. ==="
       echo "Total files: $(ls -1 ${{targets.contextdir}}/${{vars.flyway-base}}/lib/netty | wc -l), Expected ~26 files"
