Add the ldd-check test to ffmpeg (#44359)

--- a/ffmpeg.yaml
+++ b/ffmpeg.yaml
@@ -2,7 +2,7 @@
 package:
   name: ffmpeg
   version: "7.1.1"
-  epoch: 0
+  epoch: 1
   description: ffmpeg multimedia library
   copyright:
     - license: GPL-3.0-or-later AND LGPL-3.0-or-later
@@ -145,6 +145,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ffmpeg-dev
 
   - name: ffmpeg-doc
     pipeline:
