--- a/inih.yaml
+++ b/inih.yaml
@@ -1,7 +1,7 @@
 package:
   name: inih
   version: "58"
-  epoch: 2
+  epoch: 3
   description: Simple .INI file parser for embedded systems
   copyright:
     - license: BSD-3-Clause
@@ -49,6 +49,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: inih-dev
 
   - name: inih-static
     description: inih static
