--- a/iniparser.yaml
+++ b/iniparser.yaml
@@ -1,7 +1,7 @@
 package:
   name: iniparser
   version: "4.2.6"
-  epoch: 0
+  epoch: 1
   description: "C library for parsing 'INI-style' files"
   copyright:
     - license: MIT
@@ -46,6 +46,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: iniparser-dev
 
   - name: "iniparser-doc"
     description: "iniparser documentation"
