use postunpack script
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/nginx-mainline.yaml
+++ b/nginx-mainline.yaml
@@ -19,6 +19,7 @@ environment:
     packages:
       - autoconf
       - automake
+      - bash
       - brotli-dev
       - build-base
       - busybox
@@ -280,44 +281,41 @@ subpackages:
         runs: |
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/sbin
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf
-          mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf/conf.d
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf.default
-          mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/conf.d
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/html
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/logs
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/tmp
-          mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/tmp
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf/bitnami/certs
-          mkdir -p ${{targets.contextdir}}/bitnami/nginx/conf/vhosts
           mkdir -p ${{targets.contextdir}}/docker-entrypoint-initdb.d
           mkdir -p ${{targets.contextdir}}/bitnami/nginx
-          mkdir -p ${{targets.contextdir}}/var/lib/nginx/tmp/client_body ${{targets.contextdir}}/var/lib/nginx/tmp/proxy ${{targets.contextdir}}/var/lib/nginx/tmp/fastcgi ${{targets.contextdir}}/var/lib/nginx/tmp/uwsgi ${{targets.contextdir}}/var/lib/nginx/tmp/scgi ${{targets.contextdir}}/run/nginx ${{targets.contextdir}}/var/run
+          mkdir -p ${{targets.contextdir}}/var/lib/nginx/tmp/client_body
+          mkdir -p ${{targets.contextdir}}/var/lib/nginx/tmp/proxy
+          mkdir -p ${{targets.contextdir}}/var/lib/nginx/tmp/fastcgi
+          mkdir -p ${{targets.contextdir}}/var/lib/nginx/tmp/uwsgi
+          mkdir -p ${{targets.contextdir}}/var/lib/nginx/tmp/scgi
+          mkdir -p ${{targets.contextdir}}/run/nginx
+          mkdir -p ${{targets.contextdir}}/var/run
           touch ${{targets.contextdir}}/.rnd
-      - name: Set symlinks
+      - name: Copy contents (app) | Set symlinks (configs)
         runs: |
-          ln -sf /usr/sbin/nginx ${{targets.contextdir}}/opt/bitnami/nginx/sbin/nginx
-          ln -sf /usr/lib/nginx/modules ${{targets.contextdir}}/opt/bitnami/nginx/modules
-          ln -sf /var/lib/nginx/html ${{targets.contextdir}}/opt/bitnami/nginx/html
-          ln -sf /opt/bitnami/nginx/html ${{targets.contextdir}}/app
-          ln -sf /dev/stdout ${{targets.contextdir}}/opt/bitnami/nginx/logs/access.log
-          ln -sf /dev/stderr ${{targets.contextdir}}/opt/bitnami/nginx/logs/error.log
-          ln -sf /opt/bitnami/nginx/conf/bitnami/certs ${{targets.contextdir}}/certs
-      - name: Set symlinks (configs)
+          install -m644 -D nginx.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf/nginx.conf
+          install -m644 -D nginx.default.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf/nginx.conf.default
+          install -m644 -D nginx.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/nginx.conf
+          install -m644 -D nginx.default.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/nginx.conf.default
+      - name: Run postunpack.sh
         runs: |
-          ln -sf /etc/nginx/nginx.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf/nginx.conf
-          ln -sf /etc/nginx/conf.d/nginx.default.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf/nginx.conf.default
-          ln -sf /etc/nginx/nginx.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/nginx.conf
-          ln -sf /etc/nginx/conf.d/nginx.default.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/nginx.default.conf
-          for file in $(find ${{targets.contextdir}}/etc/nginx/ -type f); do
-            ln -sf $file ${{targets.contextdir}}/opt/bitnami/nginx/conf/$(basename $file)
-          done
-          for file in $(find ${{targets.contextdir}}/etc/nginx/ -type f); do
-            ln -sf $file ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/$(basename $file)
-          done
-      - name: Set permissions
+          find ${{targets.contextdir}}/opt/bitnami -iname "*.sh" -exec sh -c '
+              sed -i "s#/opt/bitnami#${{targets.contextdir}}/opt/bitnami#g" "$1"
+              sed -i "s#\"/bitnami\"#\"${{targets.contextdir}}/bitnami\"#g" "$1"
+              sed -i "s#\"/certs\"#\"${{targets.contextdir}}/certs\"#g" "$1"
+              sed -i "s#/bitnami/nginx/data#${{targets.contextdir}}/bitnami/nginx/data#g" "$1"
+          ' sh {} \;
+          bash -x ${{targets.contextdir}}/opt/bitnami/scripts/nginx/postunpack.sh
+      - name: Copy HTML to /app
         runs: |
-          chmod -R u+rwX,g+rwX,o+rw ${{targets.contextdir}}/opt/bitnami/
-          chmod -R u+rwX,g+rwX,o+rw ${{targets.contextdir}}/bitnami/nginx
-          find ${{targets.contextdir}}/ -perm /6000 -type f -exec chmod a-s {} \; || true
+          mkdir -p ${{targets.contextdir}}/app
+          cp -R /home/build/melange-out/${{package.name}}/var/lib/nginx/html/50x.html ${{targets.contextdir}}/app
+          cp -R /home/build/melange-out/${{package.name}}/var/lib/nginx/html/index.html ${{targets.contextdir}}/app
     test:
       environment:
         contents:
