--- a/isa-l.yaml
+++ b/isa-l.yaml
@@ -1,7 +1,7 @@
 package:
   name: isa-l
   version: 2.31.1
-  epoch: 1
+  epoch: 2
   description: "Intelligent Storage Acceleration Library"
   copyright:
     - license: BSD-3-Clause
@@ -40,6 +40,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: isa-l-dev
 
   - name: isa-l-doc
     pipeline:
