test(ingress-nginx-controller-1.12.yaml): fix and expand tests
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/ingress-nginx-controller-1.12.yaml
+++ b/ingress-nginx-controller-1.12.yaml
@@ -539,6 +539,9 @@ subpackages:
         contents:
           packages:
             - libmaxminddb
+            - ${{package.name}}
+        environment:
+          BITNAMI_APP_NAME: nginx-ingress-controller
       pipeline:
         - uses: test/ldd-check
           with:
@@ -546,8 +549,18 @@ subpackages:
         - name: Test symlinks
           runs: |
             test -f $(readlink -f /opt/bitnami/common/bin/mmdblookup)
-            test -f $(readlink -f /opt/bitnami/common/lib)
-            test -f $(readlink -f /opt/bitnami/common/include)
+            test -d $(readlink -f /opt/bitnami/common/lib)
+            test -d $(readlink -f /opt/bitnami/common/include)
+        - name: Run KwoK
+          uses: test/kwok/cluster
+        - name: Test entrypoint and controller logs
+          uses: test/daemon-check-output
+          with:
+            start: |
+              /nginx-ingress-controller --kubeconfig ~/.kube/config
+            timeout: 30
+            expected_output: |
+              Running in Kubernetes cluster
 
   - name: ingress-nginx-controller-compat-${{vars.nginx-ingress-major-minor}}
     description: Compatibility package for ingress-nginx-controller
@@ -766,3 +779,13 @@ test:
       runs: |
         getcap /usr/bin/nginx-ingress-controller | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=ep$'
         getcap /usr/bin/nginx | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=ep$'
+    - name: Run KwoK
+      uses: test/kwok/cluster
+    - name: Check controller logs
+      uses: test/daemon-check-output
+      with:
+        start: |
+          nginx-ingress-controller --kubeconfig ~/.kube/config
+        timeout: 30
+        expected_output: |
+          Running in Kubernetes cluster
