restore paths after running postunpack && add symlinks to /modules
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/nginx-mainline.yaml
+++ b/nginx-mainline.yaml
@@ -287,7 +287,7 @@ subpackages:
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/tmp
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf/bitnami/certs
           mkdir -p ${{targets.contextdir}}/docker-entrypoint-initdb.d
-          mkdir -p ${{targets.contextdir}}/bitnami/nginx
+          mkdir -p ${{targets.contextdir}}/bitnami/nginx/conf/vhosts
           mkdir -p ${{targets.contextdir}}/var/lib/nginx/tmp/client_body
           mkdir -p ${{targets.contextdir}}/var/lib/nginx/tmp/proxy
           mkdir -p ${{targets.contextdir}}/var/lib/nginx/tmp/fastcgi
@@ -296,12 +296,15 @@ subpackages:
           mkdir -p ${{targets.contextdir}}/run/nginx
           mkdir -p ${{targets.contextdir}}/var/run
           touch ${{targets.contextdir}}/.rnd
-      - name: Copy contents (app) | Set symlinks (configs)
+      - name: Copy contents | Set symlinks
         runs: |
           install -m644 -D nginx.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf/nginx.conf
           install -m644 -D nginx.default.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf/nginx.conf.default
           install -m644 -D nginx.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/nginx.conf
           install -m644 -D nginx.default.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/nginx.conf.default
+
+          ln -sf /usr/sbin/nginx ${{targets.contextdir}}/opt/bitnami/nginx/sbin/nginx
+          ln -sf /usr/lib/nginx/modules ${{targets.contextdir}}/opt/bitnami/nginx/
       - name: Run postunpack.sh
         runs: |
           find ${{targets.contextdir}}/opt/bitnami -iname "*.sh" -exec sh -c '
@@ -311,6 +314,8 @@ subpackages:
               sed -i "s#/bitnami/nginx/data#${{targets.contextdir}}/bitnami/nginx/data#g" "$1"
           ' sh {} \;
           bash -x ${{targets.contextdir}}/opt/bitnami/scripts/nginx/postunpack.sh
+          # Restore original paths
+          find ${{targets.contextdir}}/opt/bitnami -type f -exec sed -i "s#${{targets.contextdir}}##g" {} \;
       - name: Copy HTML to /app
         runs: |
           mkdir -p ${{targets.contextdir}}/app
