Make dotnet provides a virtual
These all conflict on `usr/share/dotnet/ThirdPartyNotices.txt` so they
aren't co-installable and should provide something that conflicts at
solve time instead of at build time.

Signed-off-by: Jon Johnson <jon.johnson@chainguard.dev>

--- a/dotnet-8.yaml
+++ b/dotnet-8.yaml
@@ -1,7 +1,7 @@
 package:
   name: dotnet-8
   version: "8.0.13"
-  epoch: 0
+  epoch: 1
   description: ".NET SDK"
   copyright:
     - license: MIT
@@ -11,6 +11,8 @@ package:
   dependencies:
     runtime:
       - icu
+    provides:
+      - dotnet=${{package.version}}
 
 environment:
   contents:
