--- a/dotnet-6.yaml
+++ b/dotnet-6.yaml
@@ -1,7 +1,7 @@
 package:
   name: dotnet-6
   version: 6.0.136
-  epoch: 0
+  epoch: 1
   description: ".NET SDK, version 6"
   copyright:
     - license: MIT
@@ -11,6 +11,8 @@ package:
   dependencies:
     runtime:
       - icu
+    provides:
+      - dotnet=${{package.version}}
 
 environment:
   contents:
