Add the ldd-check test to jitterentropy-library

--- a/jitterentropy-library.yaml
+++ b/jitterentropy-library.yaml
@@ -1,7 +1,7 @@
 package:
   name: jitterentropy-library
   version: 3.6.1
-  epoch: 0
+  epoch: 1
   description: Jitterentropy Library
   copyright:
     - license: BSD-3-Clause
@@ -38,6 +38,11 @@ subpackages:
       - uses: split/manpages
       - uses: split/static
     description: ${{package.name}} development headers and static library
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: jitterentropy-library-dev
 
 test:
   environment:
