add bitnami compat package for influxd
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/influxd.yaml
+++ b/influxd.yaml
@@ -5,7 +5,7 @@ package:
   # a commit which will fix it but it is not released yet.
   # So, for the next bump, please remove the `rust=1.82.0` pinning.
   version: 2.7.11
-  epoch: 4
+  epoch: 5
   description: Scalable datastore for metrics, events, and real-time analytics
   copyright:
     - license: MIT
@@ -60,6 +60,53 @@ subpackages:
         - busybox
         - bash
         - yq
+  - name: ${{package.name}}-${{package.version}}-bitnami-compat
+    description: "compat package with bitnami/influxdb image"
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: influxdb
+          version-path: 2/debian-12
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxd/bin
+          cp ${{targets.destdir}}/usr/bin/influxd ${{targets.subpkgdir}}/opt/bitnami/influxd/bin/influxd
+    test:
+      environment:
+        contents:
+          packages:
+            - curl
+      pipeline:
+        - name: version tests
+          runs: |
+            /opt/bitnami/influxd/bin/influxd version | grep ${{package.version}}
+        - name: Start the influxd server
+          uses: test/daemon-check-output
+          with:
+            start: |
+              /opt/bitnami/influxd/bin/influxd run
+            timeout: 60
+            expected_output: |
+              Welcome to InfluxDB
+              Starting
+              Listening
+            post: |
+              #!/bin/sh -e
+              url=http://localhost:8086
+              response=$(curl -s -o /dev/null -w "%{http_code}" "$url")
+              if [ "$response" -ne 200 ]; then
+                echo "Error: InfluxDB did not start correctly."
+                exit 1
+              fi
+              html=$(curl -s "$url")
+              if [ -z "$html" ]; then
+                echo "Got empty HTML content from $url"
+                exit 1
+              fi
+              echo "$html" | grep -q "InfluxDB is a time series platform" || {
+                echo "response from $url did not contain \"InfluxDB is a time series platform\""
+                exit 1
+              }
+              echo "InfluxDB instance is up"
 
 update:
   enabled: true
