--- a/libavif.yaml
+++ b/libavif.yaml
@@ -1,7 +1,7 @@
 package:
   name: libavif
   version: "1.2.0"
-  epoch: 0
+  epoch: 1
   description: Library for encoding and decoding .avif files
   copyright:
     - license: BSD-2-Clause
@@ -55,6 +55,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libavif-dev
 
   - name: libavif-apps
     pipeline:
