--- a/systemd.yaml
+++ b/systemd.yaml
@@ -1,7 +1,7 @@
 package:
   name: systemd
   version: "257.3"
-  epoch: 20
+  epoch: 21
   description: The systemd System and Service Manager
   copyright:
     - license: LGPL-2.1-or-later AND GPL-2.0-or-later
@@ -453,6 +453,7 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/etc/systemd/network/
           cp 20-eth.network  ${{targets.subpkgdir}}/etc/systemd/network/
           cp 21-enp.network  ${{targets.subpkgdir}}/etc/systemd/network/
+          cp 22-end.network  ${{targets.subpkgdir}}/etc/systemd/network/
 
   - name: "systemd-logind-service"
     description: "Logind service"
