--- a/influxd.yaml
+++ b/influxd.yaml
@@ -21,6 +21,12 @@ environment:
       - go
       - rust=1.82.0
 
+var-transforms:
+  - from: ${{package.version}}
+    match: ^(\d+)\.\d+\.\d+$
+    replace: "$1"
+    to: major-version
+
 pipeline:
   - uses: git-checkout
     with:
@@ -61,13 +67,13 @@ subpackages:
         - bash
         - yq
 
-  - name: ${{package.name}}-${{package.version}}-bitnami-compat
+  - name: ${{package.name}}-bitnami-compat
     description: "compat package with bitnami/influxdb image"
     pipeline:
       - uses: bitnami/compat
         with:
           image: influxdb
-          version-path: 2/debian-12
+          version-path: ${{vars.major-version}}/debian-12
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxd/bin
           cp ${{targets.destdir}}/usr/bin/influxd ${{targets.subpkgdir}}/opt/bitnami/influxd/bin/influxd
