--- a/libdbi.yaml
+++ b/libdbi.yaml
@@ -1,7 +1,7 @@
 package:
   name: libdbi
   version: 0.9.0
-  epoch: 2
+  epoch: 3
   description: "Database independent abstraction layer for C"
   copyright:
     - license: LGPL-2.1-or-later
@@ -40,6 +40,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libdbi-dev
 
 update:
   enabled: true
