Add the ldd-check test to libdrm

--- a/libdrm.yaml
+++ b/libdrm.yaml
@@ -2,7 +2,7 @@
 package:
   name: libdrm
   version: 2.4.124
-  epoch: 0
+  epoch: 1
   description: Userspace interface to kernel DRM services
   copyright:
     - license: MIT
@@ -54,6 +54,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libdrm-dev
 
 update:
   enabled: true
