--- a/ingress-nginx-controller-1.12.yaml
+++ b/ingress-nginx-controller-1.12.yaml
@@ -543,9 +543,9 @@ subpackages:
         environment:
           BITNAMI_APP_NAME: nginx-ingress-controller
       pipeline:
-        - uses: test/ldd-check
+        - uses: test/tw/ldd-check
           with:
-            packages: $(basename ${{targets.contextdir}})
+            packages: ${{subpkg.name}}
         - name: Test symlinks
           runs: |
             test -f $(readlink -f /opt/bitnami/common/bin/mmdblookup)
