symlink /html contents instead of copying
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/nginx-mainline.yaml
+++ b/nginx-mainline.yaml
@@ -319,8 +319,8 @@ subpackages:
       - name: Copy HTML to /app
         runs: |
           mkdir -p ${{targets.contextdir}}/app
-          cp -R /home/build/melange-out/${{package.name}}/var/lib/nginx/html/50x.html ${{targets.contextdir}}/app
-          cp -R /home/build/melange-out/${{package.name}}/var/lib/nginx/html/index.html ${{targets.contextdir}}/app
+          ln -sf /home/build/melange-out/${{package.name}}/var/lib/nginx/html/50x.html ${{targets.contextdir}}/app
+          ln -sf /home/build/melange-out/${{package.name}}/var/lib/nginx/html/index.html ${{targets.contextdir}}/app
     test:
       environment:
         contents:
