--- a/libedit.yaml
+++ b/libedit.yaml
@@ -1,7 +1,7 @@
 package:
   name: libedit
   version: 3.1
-  epoch: 6
+  epoch: 7
   description: "the NetBSD editline library"
   copyright:
     - license: BSD-3-Clause
@@ -52,6 +52,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libedit-dev
 
 update:
   enabled: false
