--- a/libgeotiff.yaml
+++ b/libgeotiff.yaml
@@ -2,7 +2,7 @@
 package:
   name: libgeotiff
   version: "1.7.4"
-  epoch: 0
+  epoch: 1
   description: TIFF based interchange format for georeferenced raster imagery
   copyright:
     - license: MIT
@@ -48,6 +48,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libgeotiff-dev
 
   - name: libgeotiff-doc
     pipeline:
