--- a/libglvnd.yaml
+++ b/libglvnd.yaml
@@ -1,7 +1,7 @@
 package:
   name: libglvnd
   version: 1.7.0
-  epoch: 2
+  epoch: 3
   description: The GL Vendor-Neutral Dispatch library
   copyright:
     - license: GPL-2.0-or-later AND BSD-2-Clause AND BSD-3-Clause AND MIT AND Apache-2.0
@@ -55,6 +55,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libglvnd-dev
 
 update:
   enabled: true
