govulncheck: enable updates

--- a/govulncheck.yaml
+++ b/govulncheck.yaml
@@ -19,10 +19,10 @@ pipeline:
       packages: ./cmd/govulncheck
 
 update:
-  enabled: false
-  exclude-reason: >
-    This isn't on GitHub and it's not in release-monitor
-
+  enabled: true
+  git:
+    strip-prefix: v
+    tag-filter-prefix: v
 
 test:
   pipeline:
