Add the ldd-check test to libinput

--- a/libinput.yaml
+++ b/libinput.yaml
@@ -2,7 +2,7 @@
 package:
   name: libinput
   version: 1.27.1
-  epoch: 0
+  epoch: 1
   description: Library for handling input devices
   copyright:
     - license: MIT
@@ -79,6 +79,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libinput-dev
 
 update:
   enabled: true
