Add the ldd-check test to file

--- a/file.yaml
+++ b/file.yaml
@@ -1,7 +1,7 @@
 package:
   name: file
   version: "5.46"
-  epoch: 1
+  epoch: 2
   description: "file-type identification utility"
   copyright:
     - license: BSD-2-Clause
@@ -58,6 +58,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: "libmagic"
     description: "file-type guessing library"
