--- a/container-entrypoint.yaml
+++ b/container-entrypoint.yaml
@@ -1,13 +1,15 @@
 package:
   name: container-entrypoint
   version: 0.1.0
-  epoch: 2
+  epoch: 30
   description: Simple entrypoint script for containers
   copyright:
     - license: Apache-2.0
   dependencies:
     runtime:
       - busybox
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
