--- a/kube-fluentd-operator.yaml
+++ b/kube-fluentd-operator.yaml
@@ -1,7 +1,7 @@
 package:
   name: kube-fluentd-operator
   version: 1.18.2
-  epoch: 23
+  epoch: 30
   description: Auto-configuration of Fluentd daemon-set based on Kubernetes metadata
   copyright:
     - license: MIT
@@ -13,8 +13,10 @@ package:
       - busybox
       - jemalloc
       - libsystemd
+      - merged-bin
       - ruby-3.2
       - ruby3.2-bundler
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -129,6 +131,8 @@ subpackages:
     dependencies:
       runtime:
         - bash
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           cd image
@@ -143,6 +147,10 @@ subpackages:
           cd image
           mkdir -p ${{targets.subpkgdir}}/etc/fluent
           cp failsafe.conf ${{targets.subpkgdir}}/etc/fluent/fluent.conf
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: kube-fluentd-operator-compat
     pipeline:
@@ -161,6 +169,10 @@ subpackages:
           # this should probably live in the ruby-3.2 package but not sure if we need to do it in a way that multiple ruby versions can coexist
           # TODO JR to followup
           ln -sf $(ruby -e "puts File.join(Gem.default_dir, 'ruby', RbConfig::CONFIG['ruby_version'])") ${{targets.subpkgdir}}/usr/lib/gem/home
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
 test:
   environment:
