--- a/management-api-for-apache-cassandra-5.0.yaml
+++ b/management-api-for-apache-cassandra-5.0.yaml
@@ -1,13 +1,15 @@
 package:
   name: management-api-for-apache-cassandra-5.0
   version: "0.1.98"
-  epoch: 0
+  epoch: 30
   description: RESTful / Secure Management Sidecar for Apache Cassandra
   copyright:
     - license: Apache-2.0
   dependencies:
     runtime:
+      - merged-bin
       - procps
+      - wolfi-baselayout
     provides:
       - management-api-for-apache-cassandra=${{package.full-version}}
 
@@ -53,6 +55,9 @@ subpackages:
       # Backwards compatibility with previous package name.
       provides:
         - management-api-for-apache-cassandra-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     options:
       # This package only contains symlinks, we don't want it to introduce any
       # new depends as a result of chasing those symlinks.
