--- a/newrelic-nri-statsd.yaml
+++ b/newrelic-nri-statsd.yaml
@@ -1,10 +1,14 @@
 package:
   name: newrelic-nri-statsd
   version: 2.10.0
-  epoch: 3
+  epoch: 30
   description: An implementation of Etsy's statsd in Go with tags support
   copyright:
     - license: MIT
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   environment:
