--- a/php-8.1.yaml
+++ b/php-8.1.yaml
@@ -1,7 +1,7 @@
 package:
   name: php-8.1
   version: 8.1.31
-  epoch: 1
+  epoch: 30
   description: "the PHP programming language"
   copyright:
     - license: PHP-3.01
@@ -11,6 +11,8 @@ package:
     runtime:
       - ${{package.name}}-config
       - libxml2
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -191,6 +193,9 @@ subpackages:
     dependencies:
       provides:
         - php-config=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/etc/php/conf.d"
@@ -202,6 +207,8 @@ subpackages:
     dependencies:
       runtime:
         - "${{package.name}}-${{range.key}}-config"
+        - merged-bin
+        - wolfi-baselayout
       provides:
         - php-${{range.key}}=${{package.full-version}}
     pipeline:
@@ -222,6 +229,9 @@ subpackages:
     dependencies:
       provides:
         - php-${{range.key}}-config=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           export CONF_DIR="${{targets.subpkgdir}}/etc/php/conf.d"
@@ -244,6 +254,9 @@ subpackages:
     dependencies:
       provides:
         - php-dev=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: split/dev
       - runs: |
@@ -256,6 +269,9 @@ subpackages:
     dependencies:
       provides:
         - php-doc=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: split/manpages
     test:
@@ -267,6 +283,9 @@ subpackages:
     dependencies:
       provides:
         - php-cgi=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -277,6 +296,9 @@ subpackages:
     dependencies:
       provides:
         - php-dbg=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -287,6 +309,8 @@ subpackages:
     dependencies:
       runtime:
         - "${{package.name}}-fpm-config"
+        - merged-bin
+        - wolfi-baselayout
       provides:
         - php-fpm=${{package.full-version}}
     pipeline:
@@ -299,6 +323,9 @@ subpackages:
     dependencies:
       provides:
         - php-fpm-config=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc/php/php-fpm.d
