--- a/s6.yaml
+++ b/s6.yaml
@@ -1,13 +1,15 @@
 package:
   name: s6
   version: 2.13.1.0
-  epoch: 1
+  epoch: 30
   description: "skarnet.org's small & secure supervision software suite."
   copyright:
     - license: ISC
   dependencies:
     runtime:
       - execline
+      - merged-bin
+      - wolfi-baselayout
   scriptlets:
     trigger:
       paths:
@@ -55,6 +57,10 @@ subpackages:
     description: "s6 development headers"
     pipeline:
       - uses: split/dev
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: "s6-ipcserver"
     description: "s6 ipcserver"
@@ -65,6 +71,10 @@ subpackages:
           for i in s6-ipcserver s6-ipcserver-socketbinder s6-ipcserverd s6-applyuidgid; do
             mv "${{targets.destdir}}"/usr/bin/$i "${{targets.subpkgdir}}"/usr/bin/$i
           done
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
 update:
   enabled: true
