--- a/graphicsmagick.yaml
+++ b/graphicsmagick.yaml
@@ -1,10 +1,14 @@
 package:
   name: graphicsmagick
   version: "1.3.45"
-  epoch: 1
+  epoch: 30
   description: GraphicsMagick provides a set of commandline tools and programming APIs for manipulating, editing, and converting raster and vector images.
   copyright:
     - license: MIT
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -66,12 +70,20 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-cpp
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib
           mv ${{targets.destdir}}/usr/lib/libGraphicsMagick++.* ${{targets.subpkgdir}}/usr/lib/
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-dev
     pipeline:
@@ -86,12 +98,20 @@ subpackages:
         - uses: test/tw/ldd-check
           with:
             packages: graphicsmagick-dev
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-compat
     description: "Compatibility package to improve replacing of other container images"
     pipeline:
       - runs: |
           ln -sf /usr/bin/gm "${{targets.subpkgdir}}/gm"
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
 update:
   enabled: true
