--- a/gzip.yaml
+++ b/gzip.yaml
@@ -1,10 +1,14 @@
 package:
   name: gzip
   version: "1.13"
-  epoch: 5
+  epoch: 30
   description: "GNU data compression program"
   copyright:
     - license: GPL-3.0-or-later
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -63,6 +67,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
 update:
   enabled: true
