--- a/php-8.2.yaml
+++ b/php-8.2.yaml
@@ -1,7 +1,7 @@
 package:
   name: php-8.2
   version: 8.2.27
-  epoch: 1
+  epoch: 30
   description: "the PHP programming language"
   copyright:
     - license: PHP-3.01
@@ -11,6 +11,8 @@ package:
     runtime:
       - ${{package.name}}-config
       - libxml2
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -186,6 +188,9 @@ subpackages:
     dependencies:
       provides:
         - php-config=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/etc/php/conf.d"
@@ -197,6 +202,8 @@ subpackages:
     dependencies:
       runtime:
         - "${{package.name}}-${{range.key}}-config"
+        - merged-bin
+        - wolfi-baselayout
       provides:
         - php-${{range.key}}=${{package.full-version}}
     pipeline:
@@ -217,6 +224,9 @@ subpackages:
     dependencies:
       provides:
         - php-${{range.key}}-config=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           export CONF_DIR="${{targets.subpkgdir}}/etc/php/conf.d"
@@ -239,6 +249,9 @@ subpackages:
     dependencies:
       provides:
         - php-dev=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: split/dev
       - runs: |
@@ -251,6 +264,9 @@ subpackages:
     dependencies:
       provides:
         - php-doc=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: split/manpages
     test:
@@ -262,6 +278,9 @@ subpackages:
     dependencies:
       provides:
         - php-cgi=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -272,6 +291,9 @@ subpackages:
     dependencies:
       provides:
         - php-dbg=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -282,6 +304,8 @@ subpackages:
     dependencies:
       runtime:
         - "${{package.name}}-fpm-config"
+        - merged-bin
+        - wolfi-baselayout
       provides:
         - php-fpm=${{package.full-version}}
     pipeline:
@@ -294,6 +318,9 @@ subpackages:
     dependencies:
       provides:
         - php-fpm-config=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc/php/php-fpm.d
