--- a/ruby3.3-fluentd-1.17.yaml
+++ b/ruby3.3-fluentd-1.17.yaml
@@ -2,12 +2,13 @@ package:
   # fluentd supported versions: https://github.com/fluent/fluentd/blob/master/SECURITY.md
   name: ruby3.3-fluentd-1.17
   version: 1.17.1
-  epoch: 0
+  epoch: 30
   description: Fluentd is an open source data collector designed to scale and simplify log management. It can collect, process and ship many kinds of data in near real-time.
   copyright:
     - license: Apache-2.0
   dependencies:
     runtime:
+      - merged-bin
       - ruby${{vars.rubyMM}}-base64
       - ruby${{vars.rubyMM}}-bundler
       - ruby${{vars.rubyMM}}-cool.io
@@ -24,6 +25,7 @@ package:
       - ruby${{vars.rubyMM}}-webrick
       - ruby${{vars.rubyMM}}-yajl-ruby
       - ruby-${{vars.rubyMM}}
+      - wolfi-baselayout
     provides:
       - ruby${{vars.rubyMM}}-fluentd=${{package.full-version}}
 
@@ -74,6 +76,8 @@ subpackages:
     dependencies:
       runtime:
         - busybox
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           git clone https://github.com/kube-logging/fluentd-images.git
