--- a/velero-plugin-for-microsoft-azure.yaml
+++ b/velero-plugin-for-microsoft-azure.yaml
@@ -1,10 +1,14 @@
 package:
   name: velero-plugin-for-microsoft-azure
   version: 1.11.1
-  epoch: 2
+  epoch: 30
   description: Plugins to support Velero on microsoft-azure
   copyright:
     - license: Apache-2.0
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
@@ -35,6 +39,10 @@ subpackages:
           # /target directory is created to match the Dockerfile
           mkdir -p "${{targets.subpkgdir}}"/target
           cp "${{targets.destdir}}"/usr/bin/velero-plugin-for-microsoft-azure "${{targets.subpkgdir}}"/plugins/velero-plugin-for-microsoft-azure
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
 update:
   enabled: true
