--- a/weaviate.yaml
+++ b/weaviate.yaml
@@ -1,10 +1,14 @@
 package:
   name: weaviate
   version: "1.29.0"
-  epoch: 1
+  epoch: 30
   description: Weaviate is an open source vector database that stores both objects and vectors, allowing for combining vector search with structured filtering with the fault-tolerance and scalability of a cloud-native database, all accessible through GraphQL, REST, and various language clients.
   copyright:
     - license: BSD-3-Clause
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
