util-linux - usrmerge bin

--- a/util-linux.yaml
+++ b/util-linux.yaml
@@ -1,13 +1,14 @@
 package:
   name: util-linux
   version: "2.40.4"
-  epoch: 20
+  epoch: 30
   description: Random collection of Linux utilities
   copyright:
     - license: |-
         GPL-3.0-or-later AND GPL-2.0-or-later AND GPL-2.0-only AND GPL-1.0-only AND LGPL-2.1-or-later AND BSD-1-Clause AND BSD-3-Clause AND BSD-4-Clause-UC AND MIT AND CC-PDDC
   dependencies:
     runtime:
+      - merged-bin
       - merged-sbin
       - wolfi-baselayout
 
@@ -49,6 +50,7 @@ pipeline:
       opts: |
         --disable-silent-rules \
         --enable-newgrp \
+        --bindir=/usr/bin \
         --sbindir=/usr/bin \
         --disable-nls \
         --disable-tls \
@@ -64,9 +66,9 @@ pipeline:
   - uses: autoconf/make-install
 
   - runs: |
-      # Move to /bin to overwrite busybox's version.
+      # Move to /usr/bin to overwrite busybox's version.
       mv ${{targets.destdir}}/usr/bin/getopt \
-        ${{targets.destdir}}/usr/bin/rev ${{targets.destdir}}/bin
+        ${{targets.destdir}}/usr/bin/rev ${{targets.destdir}}/usr/bin
 
 data:
   - name: libs
@@ -107,6 +109,7 @@ subpackages:
       - uses: split/dev
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - util-linux
         - wolfi-baselayout
@@ -124,6 +127,7 @@ subpackages:
         - uses: test/docs
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
@@ -132,7 +136,6 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib
-
           mv ${{targets.destdir}}/usr/lib/${{range.key}}.so.* ${{targets.subpkgdir}}/usr/lib/
     description: ${{range.value}}
     test:
@@ -142,6 +145,7 @@ subpackages:
             packages: ${{range.key}}
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
@@ -150,14 +154,15 @@ subpackages:
     description: ${{range.value}}
     pipeline:
       - runs: |
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
           for i in usr/bin usr/sbin bin sbin; do
             if [ -e ${{targets.destdir}}/$i/${{range.key}} ]; then
-              mkdir -p ${{targets.subpkgdir}}/$i
-              mv ${{targets.destdir}}/$i/${{range.key}} ${{targets.subpkgdir}}/$i/${{range.key}}
+              mv ${{targets.destdir}}/$i/${{range.key}} ${{targets.subpkgdir}}/usr/bin/${{range.key}}
             fi
           done
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
@@ -165,6 +170,7 @@ subpackages:
     description: Login utils from util-linux package newgrp last lastb login lslogins nologin su sulogin
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - runuser
         - wolfi-baselayout
@@ -211,11 +217,12 @@ subpackages:
   - name: util-linux-misc
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
           for dir in usr/bin usr/sbin bin sbin; do
             if [ -e ${{targets.destdir}}/$dir ]; then
               mkdir -p ${{targets.subpkgdir}}/$dir/
-              mv ${{targets.destdir}}/$dir/* ${{targets.subpkgdir}}/$dir/
+              mv ${{targets.destdir}}/$dir/* ${{targets.subpkgdir}}/usr/bin/
+              rmdir ${{targets.destdir}}/$dir
             fi
           done
     description: Misc binaries for util-linux
@@ -404,6 +411,7 @@ subpackages:
             uuidd --help
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
