chore: bump latest to 25.2

--- a/clickhouse-25.2.yaml
+++ b/clickhouse-25.2.yaml
@@ -1,6 +1,6 @@
 package:
-  name: clickhouse-25.1
-  version: 25.1.6.34
+  name: clickhouse-25.2
+  version: "25.2.1.3085"
   epoch: 0
   description: ClickHouse is the fastest and most resource efficient open-source database for real-time apps and analytics.
   copyright:
@@ -20,7 +20,6 @@ environment:
       - busybox
       - ca-certificates-bundle
       - clang-19
-      # - clang-19-dev
       - cmake
       - coreutils
       - findutils
@@ -41,7 +40,7 @@ pipeline:
     with:
       repository: https://github.com/ClickHouse/ClickHouse
       tag: v${{package.version}}-stable
-      expected-commit: 004003dccf892ea293c9a7edc71321f46f75669d
+      expected-commit: 09989205d6fd661fb2683cbb1390fe4fcedaa548
 
   # The default build script is defensive and tries to protect against defining cflags.
   - uses: patch
@@ -98,7 +97,7 @@ update:
   ignore-regex-patterns:
     - '-stable$'
   git:
-    tag-filter-prefix: v25.1.
+    tag-filter-prefix: v25.2.
     strip-prefix: v
     strip-suffix: -stable
 
