Add dependency on merged-sbin

--- a/cloud-provider-aws-1.32.yaml
+++ b/cloud-provider-aws-1.32.yaml
@@ -1,13 +1,16 @@
 package:
   name: cloud-provider-aws-1.32
   version: "1.32.1"
-  epoch: 1
+  epoch: 30
   description: The AWS cloud provider provides the interface between a Kubernetes cluster and AWS service APIs.
   copyright:
     - license: Apache-2.0
   dependencies:
     provides:
       - cloud-provider-aws=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
@@ -30,6 +33,9 @@ subpackages:
         - cloud-provider-aws-cloud-controller-manager=${{package.full-version}}
         # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
         - ${{package.name}}-cloud-controller-manager-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/build
         with:
@@ -49,6 +55,9 @@ subpackages:
     dependencies:
       provides:
         - cloud-provider-aws-ecr-credential-provider=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/build
         with:
