--- a/gitlab-cng-17.9.yaml
+++ b/gitlab-cng-17.9.yaml
@@ -32,7 +32,7 @@ package:
   name: gitlab-cng-17.9
   # ---Additional updates required--- Review 'vars' section (above), when reviewing version bumps.
   version: "17.9.1"
-  epoch: 0
+  epoch: 30
   description: Cloud Native container images per component of GitLab
   copyright:
     - license: MIT
@@ -40,6 +40,9 @@ package:
     provides:
       - gitlab-cng=${{package.full-version}}
       - gitlab=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -115,6 +118,9 @@ subpackages:
     dependencies:
       provides:
         - gitlab-${{range.key}}-scripts=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           cd ${{range.value}}
@@ -127,6 +133,9 @@ subpackages:
     dependencies:
       provides:
         - gitlab-toolbox-scripts=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/local/bin
@@ -138,6 +147,9 @@ subpackages:
     dependencies:
       provides:
         - gitlab-shell-scripts-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"
@@ -162,11 +174,13 @@ subpackages:
         - curl
         - gitlab-logger-${{vars.major-minor-version}}
         - gomplate
+        - merged-bin
         - procps
-        - xtail
         - tini
         - tini-compat
         - tzdata
+        - wolfi-baselayout
+        - xtail
 
   - name: gitlab-webservice-config-${{vars.major-minor-version}}
     pipeline:
@@ -177,6 +191,9 @@ subpackages:
     dependencies:
       provides:
         - gitlab-webservice-config=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: gitlab-certificates-${{vars.major-minor-version}}
     pipeline:
@@ -192,6 +209,8 @@ subpackages:
         - gitlab-certificates=${{package.full-version}}
       runtime:
         - ca-certificates
+        - merged-bin
+        - wolfi-baselayout
     test:
       pipeline:
         - name: Test bundle-certificates script
@@ -216,6 +235,9 @@ subpackages:
         # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
         - gitlab-container-registry-compat-${{vars.major-minor-version}}
         - gitlab-container-registry-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: git-checkout
         with:
@@ -303,6 +325,9 @@ subpackages:
     dependencies:
       provides:
         - gitlab-elasticsearch-indexer=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: git-checkout
         with:
@@ -330,6 +355,9 @@ subpackages:
     dependencies:
       provides:
         - gitlab-elasticsearch-indexer-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/usr/local/bin"
@@ -341,11 +369,13 @@ subpackages:
       provides:
         - gitlab-exporter=${{package.full-version}}
       runtime:
-        - jemalloc
-        - ruby-3.2
-        - libpq-16
         - busybox
+        - jemalloc
+        - libpq-16
+        - merged-bin
+        - ruby-3.2
         - ruby3.2-bundler
+        - wolfi-baselayout
     pipeline:
       - uses: git-checkout
         with:
@@ -389,6 +419,9 @@ subpackages:
     dependencies:
       provides:
         - gitlab-logger=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: git-checkout
         with:
@@ -410,6 +443,9 @@ subpackages:
     dependencies:
       provides:
         - gitlab-logger-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           # GitLab helm chart mostly hardcodes multiple executables path to /usr/local/bin/*
@@ -422,18 +458,20 @@ subpackages:
       provides:
         - gitlab-mailroom=${{package.full-version}}
       runtime:
-        - jemalloc
-        - ruby-3.2
         - busybox
-        - ruby3.2-webrick
+        - jemalloc
+        - merged-bin
+        - ruby-3.2
         - ruby3.2-bundler
+        - ruby3.2-charlock_holmes
         - ruby3.2-oauth2
         - ruby3.2-rack
         - ruby3.2-redis
-        - ruby3.2-redis-namespace
         - ruby3.2-redis-client
-        - ruby3.2-charlock_holmes
+        - ruby3.2-redis-namespace
         - ruby3.2-snaky_hash
+        - ruby3.2-webrick
+        - wolfi-baselayout
     pipeline:
       # GitLab-Mail_Room
       - uses: git-checkout
@@ -461,7 +499,9 @@ subpackages:
       provides:
         - gitlab-shell=${{package.full-version}}
       runtime:
+        - merged-bin
         - openssh
+        - wolfi-baselayout
     pipeline:
       - uses: git-checkout
         with:
@@ -499,6 +539,9 @@ subpackages:
     dependencies:
       provides:
         - gitaly-config=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - working-directory: ./gitaly
         runs: |
