--- a/gitlab-pages-17.9.yaml
+++ b/gitlab-pages-17.9.yaml
@@ -1,7 +1,7 @@
 package:
   name: gitlab-pages-17.9
   version: "17.9.1"
-  epoch: 0
+  epoch: 30
   description: GitLab Pages daemon used to serve static websites for GitLab users.
   copyright:
     - license: MIT
@@ -11,6 +11,9 @@ package:
       # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
       - gitlab-pages-compat-${{vars.major-minor-version}}
       - gitlab-pages-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 var-transforms:
   - from: ${{package.version}}
