--- a/grafana-alloy.yaml
+++ b/grafana-alloy.yaml
@@ -1,7 +1,7 @@
 package:
   name: grafana-alloy
   version: "1.7.1"
-  epoch: 1
+  epoch: 30
   description: OpenTelemetry Collector distribution with programmable pipelines
   copyright:
     - license: Apache-2.0
@@ -9,6 +9,9 @@ package:
     provides:
       # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
       - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
