--- a/linkerd2.yaml
+++ b/linkerd2.yaml
@@ -1,7 +1,7 @@
 package:
   name: linkerd2
   version: "25.2.3"
-  epoch: 0
+  epoch: 30
   description: "meta linkerd package"
   copyright:
     - license: Apache-2.0
@@ -9,6 +9,9 @@ package:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
       - ${{package.name}}-policy-controller-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -53,6 +56,10 @@ subpackages:
             /web -version
             /web -help
             /web 2>&1 | grep 'starting admin server'
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-cli
     pipeline:
@@ -71,6 +78,10 @@ subpackages:
       pipeline:
         - name: linkerd version check
           runs: linkerd version --client | grep ${{package.version}}
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-proxy-identity
     pipeline:
@@ -85,6 +96,10 @@ subpackages:
           runs: |
             # executable doesn't have help or version flag.
             stat /usr/lib/linkerd/linkerd2-proxy-identity
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-controller
     pipeline:
@@ -101,6 +116,10 @@ subpackages:
           runs: |
             # executable doesn't have help or version flag.
             stat /usr/bin/controller
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-controller-compat
     description: "upstream image have executable placed at /"
@@ -108,6 +127,10 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.contextdir}}/
           ln -sf /usr/bin/controller ${{targets.contextdir}}/controller
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-policy-controller
     pipeline:
@@ -123,11 +146,17 @@ subpackages:
           runs: |
             # executable doesn't have help or version flag.
             stat /usr/bin/linkerd-policy-controller
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-metrics-api
     dependencies:
       runtime:
         - ca-certificates-bundle
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/build
         with:
@@ -146,6 +175,10 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.contextdir}}
           ln -sf /usr/bin/metrics-api ${{targets.contextdir}}/metrics-api
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-tap
     pipeline:
@@ -161,12 +194,20 @@ subpackages:
             # it only take two args https://github.com/linkerd/linkerd2/blob/main/viz/tap/cmd/main.go (to be run inside kubernetes)
             stat /usr/bin/tap
             /usr/bin/tap api 2>&1 | grep "starting admin server"
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-tap-compat
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}
           ln -sf /usr/bin/tap ${{targets.contextdir}}/tap
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   # the linkerd debug image doesn't have linkerd2 binaries, but has a number of tools
   - name: ${{package.name}}-debug
@@ -179,19 +220,21 @@ subpackages:
         - curl
         - findutils
         - grep
+        - iproute2
         - iptables
         - iptables-xtables-privileged
-        - lsof
-        - iproute2
         - jq
         - libcap
         - libcap-utils
+        - lsof
+        - merged-bin
         - nghttp2
         - openssl
         - sed
         - tcpdump
         - tshark
         - util-linux-misc
+        - wolfi-baselayout
 
 update:
   enabled: true
