--- a/prometheus-operator.yaml
+++ b/prometheus-operator.yaml
@@ -1,10 +1,14 @@
 package:
   name: prometheus-operator
   version: "0.80.1"
-  epoch: 0
+  epoch: 30
   description: Prometheus Operator creates/configures/manages Prometheus clusters atop Kubernetes
   copyright:
     - license: Apache-2.0
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -44,6 +48,9 @@ subpackages:
       # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
       provides:
         - prometheus-config-reloader-oci-entrypoint-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: autoconf/make
         with:
@@ -58,6 +65,9 @@ subpackages:
       provides:
         # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
         - prometheus-admission-webhook-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: autoconf/make
         with:
