--- a/secrets-store-csi-driver-provider-azure.yaml
+++ b/secrets-store-csi-driver-provider-azure.yaml
@@ -1,7 +1,7 @@
 package:
   name: secrets-store-csi-driver-provider-azure
   version: 1.6.2
-  epoch: 2
+  epoch: 30
   description: Azure Key Vault provider for Secret Store CSI driver
   copyright:
     - license: MIT
@@ -11,7 +11,9 @@ package:
       - ${{package.name}}-compat=${{package.full-version}}
     runtime:
       - ca-certificates-bundle
+      - merged-bin
       - tzdata
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
