--- a/argo-rollouts.yaml
+++ b/argo-rollouts.yaml
@@ -1,7 +1,7 @@
 package:
   name: argo-rollouts
   version: "1.8.0"
-  epoch: 2
+  epoch: 30
   description: Progressive Delivery for Kubernetes
   copyright:
     - license: Apache-2.0
@@ -9,6 +9,9 @@ package:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
       - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
@@ -47,6 +50,9 @@ subpackages:
       # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
       provides:
         - kubectl-argo-rollouts-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/bump
         with:
