--- a/aws-s3-controller.yaml
+++ b/aws-s3-controller.yaml
@@ -1,7 +1,7 @@
 package:
   name: aws-s3-controller
   version: "1.0.27"
-  epoch: 0
+  epoch: 30
   description: ACK service controller for Amazon Simple Storage Service (S3)
   copyright:
     - license: Apache-2.0
@@ -9,6 +9,9 @@ package:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
       - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
