--- a/contour-1.30.yaml
+++ b/contour-1.30.yaml
@@ -1,7 +1,7 @@
 package:
   name: contour-1.30
   version: "1.30.2"
-  epoch: 3
+  epoch: 30
   description: Contour is a Kubernetes ingress controller using Envoy proxy.
   copyright:
     - license: Apache-2.0
@@ -10,6 +10,9 @@ package:
       - contour=${{package.full-version}}
       # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
       - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 var-transforms:
   - from: ${{package.version}}
@@ -49,6 +52,9 @@ subpackages:
     dependencies:
       provides:
         - contour-bitnami-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: bitnami/compat
         with:
