--- a/envoy-ratelimit.yaml
+++ b/envoy-ratelimit.yaml
@@ -3,7 +3,7 @@ package:
   name: envoy-ratelimit
   # This project doesn't do releases and everything is commit based.
   version: "0.0.0_git20250303"
-  epoch: 1
+  epoch: 30
   description: Go/gRPC service designed to enable generic rate limit scenarios from different types of applications.
   copyright:
     - license: Apache-2.0
@@ -11,6 +11,9 @@ package:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
       - envoy-ratelimit-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
