--- a/kafka_exporter.yaml
+++ b/kafka_exporter.yaml
@@ -1,7 +1,7 @@
 package:
   name: kafka_exporter
   version: "1.9.0"
-  epoch: 0
+  epoch: 30
   description: "Kafka exporter for Prometheus"
   copyright:
     - license: Apache-2.0
@@ -9,6 +9,9 @@ package:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
       - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
