--- a/mountpoint-s3-csi-driver.yaml
+++ b/mountpoint-s3-csi-driver.yaml
@@ -1,12 +1,15 @@
 package:
   name: mountpoint-s3-csi-driver
   version: "1.12.0"
-  epoch: 1
+  epoch: 30
   description: Built on Mountpoint for Amazon S3, the Mountpoint CSI driver presents an Amazon S3 bucket as a storage volume accessible by containers in your Kubernetes cluster
   dependencies:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
       - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
   copyright:
     - license: Apache-2.0
 
