--- a/promxy.yaml
+++ b/promxy.yaml
@@ -1,7 +1,7 @@
 package:
   name: promxy
   version: "0.0.92"
-  epoch: 0
+  epoch: 30
   description: An aggregating proxy to enable HA prometheus.
   copyright:
     - license: MIT
@@ -11,6 +11,8 @@ package:
       - promxy-compat=${{package.full-version}}
     runtime:
       - ca-certificates-bundle
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
