--- a/secrets-store-csi-driver-provider-aws.yaml
+++ b/secrets-store-csi-driver-provider-aws.yaml
@@ -1,7 +1,7 @@
 package:
   name: secrets-store-csi-driver-provider-aws
   version: "0.3.11"
-  epoch: 0
+  epoch: 30
   description: AWS Secrets Manager and AWS Systems Manager Parameter Store provider for the Secret Store CSI Driver.
   copyright:
     - license: Apache-2.0
@@ -9,6 +9,9 @@ package:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
       - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
