--- a/sql_exporter.yaml
+++ b/sql_exporter.yaml
@@ -1,7 +1,7 @@
 package:
   name: sql_exporter
   version: 0.17.0
-  epoch: 2
+  epoch: 30
   description: Database-agnostic SQL Exporter for Prometheus
   copyright:
     - license: Apache-2.0
@@ -11,6 +11,9 @@ package:
     # are updated to not depend on compat packages.
     provides:
       - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
