--- a/gzip.yaml
+++ b/gzip.yaml
@@ -1,10 +1,14 @@
 package:
   name: gzip
   version: "1.13"
-  epoch: 5
+  epoch: 30
   description: "GNU data compression program"
   copyright:
     - license: GPL-3.0-or-later
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -43,14 +47,7 @@ pipeline:
   - uses: autoconf/make-install
 
   - runs: |
-      mkdir -p ${{targets.destdir}}/bin
-
-      for i in gzip gunzip; do
-        mv ${{targets.destdir}}/usr/bin/${i} ${{targets.destdir}}/bin/${i}
-        ln -s /bin/${i} ${{targets.destdir}}/usr/bin/${i}
-      done
-
-      ln -sf /bin/gunzip ${{targets.destdir}}/usr/bin/uncompress
+      ln -sf /usr/bin/gunzip ${{targets.destdir}}/usr/bin/uncompress
 
   - uses: strip
 
@@ -63,6 +60,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
 update:
   enabled: true
